Add the function of writing user programs to the flash (10)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -903,7 +903,7 @@ function fileExport() {
   var str = "{\n";
 
   str += "  \"_version     \" : \"" + APP_NAME_VERSION + "\",\n";
-  str += "  \"_comment     \" : \"  CURRENT  #8   #9   #10  #11  #12  #13  #14  #15  \",\n";
+  str += "  \"_comment     \" : \"  Current  #8   #9   #10  #11  #12  #13  #14  #15  \",\n";
   str += fileExportOneLine(OSC_1_WAVE     );
   str += fileExportOneLine(OSC_1_SHAPE    );
   str += fileExportOneLine(OSC_1_MORPH    );
