--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -43,7 +43,7 @@ td.keyh {
 <script>
 const APP_NAME_VERSION = "PRA32-U CTRL v2.0.1";
 
-const MIDI_CH        = 0;       // 0-based
+const PRA32_U_MIDI_CH = 0;  // 0-based
 
 
 const NOTE_OFF       = 0x80;
@@ -345,7 +345,7 @@ document.addEventListener("touchstart", function(event) {
 
 window.onload = function() {
   document.getElementById("spanAppNameVersion").innerHTML = "<strong>" + APP_NAME_VERSION + "</strong>";
-  document.getElementById("spanMidiCh").innerHTML = MIDI_CH + 1;
+  document.getElementById("spanMidiCh").innerHTML = PRA32_U_MIDI_CH + 1;
 
   if (navigator.requestMIDIAccess) {
     navigator.requestMIDIAccess({sysex: false}).then(onMIDISuccess, onMIDIFailure);
@@ -375,11 +375,11 @@ function sleep(msec) {
 
 function panic() {
   if (midiOutput) {
-    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), ALL_NOTES_OFF, 0]);
+    midiOutput.send([(CONTROL_CHANGE | PRA32_U_MIDI_CH), ALL_NOTES_OFF, 0]);
     sleep(0);
-    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), ALL_SOUND_OFF, 0]);
+    midiOutput.send([(CONTROL_CHANGE | PRA32_U_MIDI_CH), ALL_SOUND_OFF, 0]);
     sleep(0);
-    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), RESET_ALL_CTRLS, 0]);
+    midiOutput.send([(CONTROL_CHANGE | PRA32_U_MIDI_CH), RESET_ALL_CTRLS, 0]);
     sleep(0);
   }
 }
@@ -500,7 +500,7 @@ function onMIDIMessage(event) {
   console.log(event.data);
 
   // CAUTION: Running Status and System Exclusive are not taken into account
-  if (event.data[0] == (CONTROL_CHANGE | MIDI_CH)) {
+  if (event.data[0] == (CONTROL_CHANGE | PRA32_U_MIDI_CH)) {
     var number = event.data[1];
     var value = event.data[2];
     if (controllersInLocalStorage.indexOf(number) >= 0) {
@@ -529,7 +529,7 @@ function onMIDIMessage(event) {
   }
 
   const PROGRAM_CHANGE = 0xC0;
-  if (event.data[0] == (PROGRAM_CHANGE | MIDI_CH)) {
+  if (event.data[0] == (PROGRAM_CHANGE | PRA32_U_MIDI_CH)) {
     var number = event.data[1];
     if (number >= 0 && number <= 7) {
       preset(number);
@@ -705,7 +705,7 @@ function onChangeControlChange(number, value) {
   }
   if (midiOutput) {
     if ((number <= 127) && (parseInt(value) <= 127)) {
-      midiOutput.send([(CONTROL_CHANGE | MIDI_CH), number, parseInt(value)]);
+      midiOutput.send([(CONTROL_CHANGE | PRA32_U_MIDI_CH), number, parseInt(value)]);
       sleep(0);
     }
   }
@@ -780,7 +780,7 @@ function storeParameters(number) {
 
 function sendProgramChange(number) {
   if (midiOutput) {
-    midiOutput.send([(PROGRAM_CHANGE | MIDI_CH), number]);
+    midiOutput.send([(PROGRAM_CHANGE | PRA32_U_MIDI_CH), number]);
     sleep(0);
   }
 }
@@ -792,25 +792,25 @@ function writeParameters(number) {
   }
 
   if (midiOutput) {
-    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), PROG_N_TO_W_TO,  number]);
+    midiOutput.send([(CONTROL_CHANGE | PRA32_U_MIDI_CH), PROG_N_TO_W_TO,  number]);
     sleep(0);
-    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), WRITE_P_TO_PROG, 0]);
+    midiOutput.send([(CONTROL_CHANGE | PRA32_U_MIDI_CH), WRITE_P_TO_PROG, 0]);
     sleep(0);
-    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), WRITE_P_TO_PROG, 1]);
+    midiOutput.send([(CONTROL_CHANGE | PRA32_U_MIDI_CH), WRITE_P_TO_PROG, 1]);
     sleep(0);
   }
 }
 
 function noteOn(noteNumber) {
   if (midiOutput) {
-    midiOutput.send([(NOTE_ON | MIDI_CH), noteNumber + transpose, 100]);
+    midiOutput.send([(NOTE_ON | PRA32_U_MIDI_CH), noteNumber + transpose, 100]);
     sleep(0);
   }
 }
 
 function noteOff(noteNumber) {
   if (midiOutput) {
-    midiOutput.send([(NOTE_OFF | MIDI_CH), noteNumber + transpose, 64]);
+    midiOutput.send([(NOTE_OFF | PRA32_U_MIDI_CH), noteNumber + transpose, 64]);
     sleep(0);
   }
 }
